# tax_preorganizer_public

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTENT_PROVENANCE.md  LICENSE  LICENSE_POLICY.md  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
config/: ai_review_prompt.txt  categories.yaml
docs/: ARCHITECTURE_REVIEW.md  HANDOFF.md  QUICK_START.md  invoice_sorter_architecture.drawio
examples/: sample_invoice_summary.md
scripts/: check_license_metadata.py  suggest_local_config.py
src/invoice_sorter/: __init__.py  agent_client.py  agent_service.py  ai_review.py  audit_log.py  classifier.py  cli.py  config.py  constants.py  corrections.py  extraction_adapter.py  file_operations.py  gui.py  metadata_extraction.py  models.py  orchestrator.py  performance_log.py  report.py  routing.py  scanner.py
tests/: conftest.py  test_agent_server_endpoints.py  test_agent_streaming.py  test_ai_review.py  test_classifier.py  test_cli_dry_run.py  test_corrections.py  test_documentation_sync.py  test_exec_pdf.py  test_exec_stream_gui.py  test_extraction_adapter.py  test_file_operations.py  test_gui_controls.py  test_metadata_extraction.py  test_report.py  test_routing.py  test_suggest_local_config.py
